k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
  labels:
    app: fastapi-service
spec:
  selector:
    app: fastapi-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
